--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
         }
     }
 
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
+
 }
 
 dependencies {
